Add parsing benchmarks